--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,10 @@
 .DS_Store
+Resources
 build.log
 build
 npm-debug.log
 tmp
-.map*.a
-*.dll
-*.dylib
-*.exe
-*.o
-*.obj
-*.so
-Resources
-/plugins
-*.lock
-
-*.prefs
-
-Documents/node_modules/
-Documents/coords.sql
+.map
+.project
+.settings
+Thumbs.db
