--- a/app/config.json
+++ b/app/config.json
@@ -1,7 +1,5 @@
 {
-	"global": {
-		"couchdb_server": "https://tipasha:409021716@tipasha.iriscouch.com/"
-	},
+	"global": {},
 	"env:development": {},
 	"env:test": {},
 	"env:production": {},
