new connection logic on feeds

--- a/app/config.json
+++ b/app/config.json
@@ -1,5 +1,7 @@
 {
-	"global": {},
+	"global": {
+		"queryURL" : "http://tipasha.iriscouch.com/"
+	},
 	"env:development": {},
 	"env:test": {},
 	"env:production": {},
